# interfaz

./: .gitignore  README.md  app.py  dash_web_ir.py  data.csv  layout_helpers.py  list_with_taxonomy_test  plot.py  pyproject.toml  render.yaml  requirements.txt
dash/: interfaz_dash_class.py
dash_new/: dash_web_ir.py
data/: taxonomy.csv
data/GCA_019038085.1_ASM1903808v1/analysis/: chromosome_GCA_019038085.1_ASM1903808v1_all_result_obs_aggregated.csv  chromosome_GCA_019038085.1_ASM1903808v1_all_result_sim_aggregated.csv  chromosome_GCA_019038085.1_ASM1903808v1_cod.csv  chromosome_GCA_019038085.1_ASM1903808v1_cod_6mer.html  chromosome_GCA_019038085.1_ASM1903808v1_coding_result_obs_aggregated.csv  chromosome_GCA_019038085.1_ASM1903808v1_coding_result_sim_aggregated.csv  chromosome_GCA_019038085.1_ASM1903808v1_density1_top.csv  chromosome_GCA_019038085.1_ASM1903808v1_density5.html  chromosome_GCA_019038085.1_ASM1903808v1_hc_all.csv  chromosome_GCA_019038085.1_ASM1903808v1_hc_all.html  chromosome_GCA_019038085.1_ASM1903808v1_hc_coding.csv  chromosome_GCA_019038085.1_ASM1903808v1_hc_coding.html  chromosome_GCA_019038085.1_ASM1903808v1_hc_non_coding.csv  chromosome_GCA_019038085.1_ASM1903808v1_hc_non_coding.html  chromosome_GCA_019038085.1_ASM1903808v1_non.csv  chromosome_GCA_019038085.1_ASM1903808v1_non_6mer.html  chromosome_GCA_019038085.1_ASM1903808v1_non_coding_result_obs_aggregated.csv  chromosome_GCA_019038085.1_ASM1903808v1_non_coding_result_sim_aggregated.csv  chromosome_GCA_019038085.1_ASM1903808v1_ratio_cod_vs_non.html
maker/: dash_web_ir.py  plot.py
maker2/: make_web.py  rst_maker.py  rst_maker_individual.py  rst_maker_taxon.py
old/: dash_web_ir.py
old/dash/: interfaz_dash_class.py  interfaz_dash_class_2.py
old/maker/: dash_web_ir.py  data.py  plot.py
old/maker2/: make_web.py  rst_maker.py  rst_maker_individual.py  rst_maker_taxon.py
old/source/: conf.py
source/: conf.py  index.rst
source/_static/: heatmap.csv  plot3.html
(+423 files in other folders)
