[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phd"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Bio",
    "biopython",
    "pandas",
    "plotly",
    "scikit-learn",
    "ukkonen",
    "loguru",
    "snakemake",
]

[project.optional-dependencies]
dev = [
    # Testing, linting
    "pytest",
    "ruff",
    # Libraries used in scripts/analysis
    "logomaker",
    "matplotlib",
    "networkx",
    "seaborn",
    "beautifulsoup4",
]

[tool.setuptools.packages.find]
include = ["scripts", "scripts.*"]

[tool.ruff]
line-length = 110
output-format = "concise"
exclude = [ 
    # FIXME: later
    "scripts/utils/__init__.py",
    "doc/*",
    "scripts/log.py",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle error
    "W",    # pycodestyle warning
    "I",    # isort
    "C",    # flake8-complexity
    "UP",   # pyupgrade
    "RUF",  # ruff
    "PTH",  # Paths
    "ANN001",
    "ANN201",
    "T",
    # "D", # Doc
    # "ERA",
    # "S",
    "F",
    "PD",
    "A",
    "N",
    "ALL",
]
ignore = [
    # generic variable name "df", maybe fix later
    "PD901", 
    # Non useful time recommendation
    "DTZ005",
    # no need to add  __init__
    "INP001",
    "PD010", # weird pandas rule on pivot_table and unstack
    # Missing docstring in public package
    "D104",
    "D105",
    "D107",
    # won't fix
    "ANN002",
    "ANN003",
    "ANN204",
    # Not useful for used
    "TD003",
    # We like asserts
    "S101",
    # Subprocess
    "S602",
    "S603",
    # Too many arguments in function definition (8 > 5)
    # maybe in the future
    "PLR0913",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    # Do not require doc, and allow asserts
    "D",
    "S101",
    "S311",
    "PLR2004",
]
"scripts/utils/timing.py" = ["ANN"]
